# djitter

./: .gitignore  README.md  pyproject.toml
djitter/: admin.py  apps.py  models.py
djitter/migrations/: 0001_initial.py
social/: settings.py
